--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/css/styles.css
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/css/styles.css
@@ -11750,4 +11750,11 @@ html {
   fill: #FF6600 !important;
 }
 
+.text-pink {
+  color: #FF6600 !important;
+}
+.text-primary {
+  color: #FF6600 !important;
+}
+  
 }
