--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/css/styles.css
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/css/styles.css
@@ -11763,4 +11763,11 @@ html {
   border-color: #FF7B1A !important;
 }
 
+@media (max-width: 767.98px) {
+    a.btn.btn-primary {
+        background-color: #FF6600 !important;
+        border-color: #FF6600 !important;
+    }
+}
+  
 }
