--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/css/styles.css
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/css/styles.css
@@ -11764,7 +11764,7 @@ html {
 }
 
 @media (max-width: 767.98px) {
-    a.btn.btn-primary {
+    a.btn.btn-primary.btn-lg.px-5.py-3.me-sm-3.fs-6.fw-bolder {
         background-color: #FF6600 !important;
         border-color: #FF6600 !important;
     }
