--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/css/styles.css
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/css/styles.css
@@ -12044,5 +12044,36 @@ body {
         color: var(--bs-gray-400); !important;
     }
 }
+
+/* ----- Escala y opacidad para slides ----- */
+.swiper-slide {
+  opacity: 0.5 !important;
+  transform: scale(0.7) !important;
+  transition: all 0.3s ease;
+}
+.swiper-slide-active {
+  opacity: 1 !important;
+  transform: scale(1) !important;
+}
+.swiper-slide-prev, .swiper-slide-next {
+  opacity: 0.8 !important;
+  transform: scale(0.85) !important;
+}
+
+/* ----- Etiqueta de género ----- */
+.genre-label {
+  display: inline-block;
+  background-color: #ffc107; /* color 'warning' */
+  color: #fff;
+  font-size: 1rem;       /* un poco más grande que el .9rem usual */
+  font-weight: 800;      /* más negrita */
+  padding: 0.25rem 0.5rem;
+  border-radius: 0.25rem;
+  text-shadow: 1px 1px 2px rgba(0,0,0,0.7); /* contorno/sombra al texto */
+  cursor: default;
+  pointer-events: none;
+  /* Ajustes opcionales: letter-spacing, etc. */
+}
+
   
 }
