--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/css/styles.css
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/css/styles.css
@@ -11881,6 +11881,19 @@ html {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(255, 169, 77, 1)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
 
+.cursor-blink {
+  color: #ff8a00;         /* Naranja */
+  font-weight: 800;       /* Más grueso, si quieres */
+  margin-left: 4px;       /* Un pequeño espacio a la izquierda */
+  animation: blink 1s step-start infinite;
+}
+
+/* Animación que alterna la opacidad de 1 a 0 */
+@keyframes blink {
+  50% { opacity: 0; }
+}
+
+  
 /* Ajustes específicos para salomon.html */
 .custom-article {
   background-color: var(--bg-color);
